[package]
name = "did"
description = "Implements a parser for decentralized identifiers"
version = "0.1.1"
authors = ["Eduardo Leegwater Simões <eduardols@protonmail.com>"]
edition = "2018"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
